--- a/AutisteWatch/WatchAutiste/Base.lproj/Interface.storyboard
+++ b/AutisteWatch/WatchAutiste/Base.lproj/Interface.storyboard
@@ -28,7 +28,7 @@
                     <items>
                         <label alignment="left" text="Alert Label" id="IdU-wH-bcW"/>
                     </items>
-                    <notificationCategory key="notificationCategory" identifier="myCategory" id="JfB-70-Muf"/>
+                    <notificationCategory key="notificationCategory" identifier="AllNotif" id="JfB-70-Muf"/>
                     <connections>
                         <outlet property="notificationAlertLabel" destination="IdU-wH-bcW" id="JKC-fr-R95"/>
                         <segue destination="4sK-HA-Art" kind="relationship" relationship="dynamicNotificationInterface" id="kXh-Jw-8B1"/>
@@ -42,14 +42,12 @@
             <objects>
                 <controller id="4sK-HA-Art" customClass="NotificationController" customModule="WatchAutiste" customModuleProvider="target">
                     <items>
-                        <timer alignment="center" id="lsN-4B-GeF"/>
                         <label alignment="center" verticalAlignment="center" text="Label" id="XMQ-Ab-4Ub"/>
                         <imageView alignment="center" verticalAlignment="bottom" id="xza-AG-B8C"/>
                     </items>
                     <connections>
                         <outlet property="descriptionLabel" destination="XMQ-Ab-4Ub" id="E3h-mp-Pwe"/>
                         <outlet property="imageNotification" destination="xza-AG-B8C" id="XIx-Bd-gHZ"/>
-                        <outlet property="timeLabel" destination="lsN-4B-GeF" id="x6t-S0-dIy"/>
                     </connections>
                 </controller>
             </objects>
